--- a/production/templates/production/base.html
+++ b/production/templates/production/base.html
@@ -24,6 +24,9 @@
     }
     
   </script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'js/app.js' %}"></script>
+
 
   <style>
     body { font-family: 'Kanit', sans-serif; background-color: #f8fafc; }
